Still fixing button on mobile

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -31,6 +31,11 @@
   color: white;
 }
 
+.banner__ctaText {
+  position: relative;
+  top: .5px
+}
+
 /* Max Width */
 @media (max-width: 366px) {
   .banner__title {
